some example fixes

--- a/week3-apis-data/02_nlp_compromise/index.html
+++ b/week3-apis-data/02_nlp_compromise/index.html
@@ -7,7 +7,7 @@
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
-    <script src="https://unpkg.com/nlp_compromise@latest/builds/nlp_compromise.min.js"></script>
+    <script src="https://unpkg.com/compromise@latest/builds/compromise.min.js"></script>
 
     <script src="sketch.js" type="text/javascript"></script>
 
