--- a/week3-closures/04_closure_delay_API_calls/index.html
+++ b/week3-closures/04_closure_delay_API_calls/index.html
@@ -5,7 +5,10 @@
     <title>NY Times Article Search</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
     <!--<script language="javascript" type="text/javascript" src="//cdn.jsdelivr.net/p5.js/0.3.6/p5.min.js"></script>-->
-
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.js"
+      integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+      crossorigin="anonymous"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
@@ -31,7 +34,7 @@
     </p>
 
     <p><button id = "submit">search</button></p>
-    
+
     <h2>Articles</h2>
 
     <p id="results"></p>
