syllabus and chatbots

--- a/week4-chatbots/speech/02_recognition/index.html
+++ b/week4-chatbots/speech/02_recognition/index.html
@@ -16,7 +16,12 @@
 </head>
 
 <body>
-    <h1>p5.Speech Demo</h1>
+    <h1>p5.Speech Recognition Demo</h1>
+
+    <h3>Speak!</h3>
+    <p id="speech"></p>
 </body>
+
+
 
 </html>
