changing p5.js speech API

--- a/week4-chatbots/02_speech_basics/index.html
+++ b/week4-chatbots/02_speech_basics/index.html
@@ -10,7 +10,7 @@
 
     <script src="libraries/p5.js"></script>
     <script src="libraries/p5.dom.js"></script>
-    <script src="libraries/p5.speech.js"></script>
+    <script src="../p5.js-speech/lib/p5.speech.js"></script>
     <script src="sketch.js"></script>
 
 </head>
